--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -43,7 +43,7 @@
 \null
 
 \begin{fullwidth}
-This script is part of the course material for the MSc model Research Skills, University of Freiburg (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, created \today.\\[0.5cm]
+These lecture notes are part of the course material for the MSc model Research Skills, University of Freiburg (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, created \today.\\[0.5cm]
 \end{fullwidth}
 
 \href{https://florianhartig.wordpress.com/}{Florian Hartig}\\
@@ -51,7 +51,7 @@ University of Freiburg\\
 Germany\\[0.2cm]
 If you find typos or have suggestions, please report them by creating a ticket \href{https://github.com/florianhartig/ResearchSkills/issues}{here}
 
-
+\paragraph{Note:} These notes are supposed to be used together with the lecture notes on statistics, latex, and the link collections that are available from the course \href{http://florianhartig.github.io/ResearchSkills/}{website}.
 
 
 \paragraph{Acknowledgments:}Severin Hauenstein for contributions to the chapter on scientific writing.
@@ -119,13 +119,13 @@ The study of logic is sometimes further subdivided into informal and formal logi
 
 Empiricism\marginnote{Famous empiricists are, e.g., Hume or John Stuart Mill} is the stance that (scientific) knowledge comes only from observations. For an empiricist, (sensory) experience is more important for the formation of ideas about how the world works than logical reasoning or innate knowledge. 
 
-\paragraph{Inductive reasoning}\marginnote{Induction = conclusion from the specific to the general} An important idea in the context of empiricism is the concept of inductive reasoning. An induction is a conclusion from particular instances to the general. Example: all swans I have seen are white, therefore all swans are white.\marginnote{Empiricism != induction} Empiricism does not prescribe the use of inductions for generating knowledge, but it seems obvious that pure empiricism would require to rely on inductive reasoning if any general conclusions are to be generated. 
+\paragraph{Inductive reasoning} An important idea in the\marginnote{Induction = conclusion from the specific to the general} context of empiricism is the concept of inductive reasoning. An induction is a conclusion from particular instances to the general. Example: all swans I have seen are white, therefore all swans are white.\marginnote{Empiricism != induction} Empiricism does not prescribe the use of inductions for generating knowledge, but it seems obvious that pure empiricism would require to rely on inductive reasoning if any general conclusions are to be generated. 
 
 
-\paragraph{The problem of induction}The problem\marginnote{Inductions are not always correct} with inductive reasoning is evident - an inductive conclusion does not need to be correct, even if the assumptions (observations, formal logic) are formally correct. Hence, we cannot be truly be sure if the knowledge that is created by empiricism and inductive reasoning is reliable. This problem has been named the ``problem of induction" by David Hume, but it was of course known for a long time. Sextus Empiricus (c. 160-210 AD), the name father of empiricism, observed famously:\marginnote{C. D. Broad remarked more shortly: ``Induction is the glory of science and the scandal of philosophy"}
+\paragraph{The problem of induction}The problem\marginnote{Inductions are not always correct} with inductive reasoning is evident - an inductive conclusion does not need to be correct, even if the assumptions (observations, formal logic) are formally correct. Hence, we cannot be truly be sure if the knowledge that is created by empiricism and inductive reasoning is reliable. This problem has been named the ``problem of induction" by David Hume, but it was of course known for a long time. Sextus Empiricus (c. 160-210 AD), the name father of empiricism, observed famously:
 
 \begin{quote}
-When they propose to establish the universal from the particulars by means of induction, they will effect this by a review of either all or some of the particulars. But if they review some, the induction will be insecure, since some of the particulars omitted in the induction may contravene the universal; while if they are to review all, they will be toiling at the impossible, since the particulars are infinite and indefinite. Sextus Empiricus (c. 160-210 AD)
+When\marginnote{C. D. Broad remarked more shortly: ``Induction is the glory of science and the scandal of philosophy"} they propose to establish the universal from the particulars by means of induction, they will effect this by a review of either all or some of the particulars. But if they review some, the induction will be insecure, since some of the particulars omitted in the induction may contravene the universal; while if they are to review all, they will be toiling at the impossible, since the particulars are infinite and indefinite. Sextus Empiricus (c. 160-210 AD)
 \end{quote}
 
 Because of the problem of induction, there has always been a stain on inductive reasoning, and philosophers have tried to avoid relying on it for drawing conclusions about the world
@@ -148,7 +148,7 @@ Rationalism, in contrast to empiricism, holds the view that knowledge is created
 Good sense is\marginnote{ These words of one of the founding fathers of Science are often read as a sarcastic observation of human vanity. However, if one continues reading, it becomes clear that Descartes may, after all, have been serious about his faith in human rationality - he continues: ``And in this it is not likely that all are mistaken. The conviction is rather to be held as testifying that the power of judging [...] is by nature equal in all men; and that the diversity of our opinions, consequently, does not arise from some being endowed with a larger share of reason than others, but solely [because] we conduct our thoughts along different ways, and do not fix our attention on the same objects. ''}, of all things among men, the most equally distributed; for every one thinks himself so abundantly provided with it, that those even who are the most difficult to satisfy in everything else, do not usually desire a larger measure of this quality than they already possess.
 \end{quote}
 
-Pure thinking and logical conclusions are a fine thing, but a problem for a pure rationalist is that s(he) still needs something to think  about - from where do the objects and basic assumptions arise to which we can apply our rational thoughts? Rationalists differ though in their view on this matter. Some philosophers have stressed experience as providing these starting points, while others have maintained that there are some innate concepts or truths that we can know without reference to the material world. 
+Pure thinking and logical conclusions are a fine thing, but a problem for a pure rationalist is that s(he) still needs something to think  about - from where do the objects and basic assumptions arise to which we can apply our rational thoughts? Rationalists differ in their view on this matter. Some philosophers have stressed experience as providing these starting points, while others have maintained that there are some innate concepts or truths that we can know without reference to the material world. 
 
 \paragraph{Deductive reasoning}Wherever\marginnote{Deductive reasoning = conclude from the general to the specific.} the starting points of rationalism come from, the reasoning natural to rationalism is deductive reasoning. A deduction is a conclusion from the general to the specific.\marginnote{In logic, the applewine example would be called a syllogism (Greek: syllogismos, "conclusion, inference" - a deductive argument based on two or more premises). The classical form, defined by Aristotle, consists of a general statement (the major premise) with a specific statement (the minor premise). In rhetoric, the major premise is often omitted, assuming the audience intuitively accepts it "Socrates is mortal because he is a human" - this is called an Enthymeme} 
 See \href{https://en.wikipedia.org/wiki/Syllogism}{wikipedia} for further explanations. Example: all people from Frankfurt like applewine, I am from Frankfurt, therefore I like applewine. The last sentence 
@@ -318,17 +318,13 @@ All of them work fine, with slightly different interface, search options, advant
 
 Also the answer to how to organize your literature is pleasingly short - people have created specialized software for this purpose. These reference managers work great, so use them! They will allow you to search in your papers for keywords, names, or anything else, link your pdfs, and they will also couple with your word processing software (MS Word, Open Office, LaTeX). 
 
-\marginnote{See our lab on working with a reference manager \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch}{here}}
+\marginnote{See our lab on working with reference managers \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch}{here}}
 
 The only question is which of the available programs work best for you. A general recommendation is difficult, as the choice depends next to your personal preferences also on you operating system and your word processing software. More details in our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch}{lab on literature research}. You will also find lots of hints on the internet. 
 
 \section{Citation rules}
 
-Given\marginnote{High-profile cases of "faulty" citations include the former German Minister of Defense Karl-Theodor zu Guttenberg as well as the the former German Federal Minister of Education and Research, Annette Schavan} the amount of PhD titles that have recently been revoked from prominent public figures for not correctly citing the literature in their PhD theses (a charitable expression for outright plagiarism in some cases), it seems a good idea to make sure that everyone is aware of a basic rule in science:
-
-\begin{quote}
-If you use the ideas of another person in your work, you need to cite them!
-\end{quote}
+Given\marginnote{High-profile cases of "faulty" citations include the former German Minister of Defense Karl-Theodor zu Guttenberg as well as the the former German Federal Minister of Education and Research, Annette Schavan} the amount of PhD titles that have recently been revoked from prominent public figures in Germany for not correctly citing the literature in their PhD theses (a charitable expression for outright plagiarism in some cases), it seems a good idea to make sure that everyone is aware of a basic rule in science: If you use the ideas of another person in your work, you need to cite them!
 
 There are different types of citations:
 
@@ -340,9 +336,11 @@ There are different types of citations:
 
 Taking larger passages / ideas from a source without making this clear is plagiarism. Changing only some words will make it obvious that deliberate intention was involved. Naming the source alone doesn’t make it better when you design the presentation in a way that credit is wrongly attributed to you. By and large, the rules dictated by common sense and honesty apply!
 
+\paragraph{Self-plagiarism:} A fact that is sometimes forgotten is that the same rules apply if the original author is you! If you copy larger passages from your own work without properly citing it is also considered plagiarism! 
+
 \paragraph{Citation Signals} Citations can be modified by citation signals. An example is the signal ``but'', as in ``It is like it is (but see Adams, 2009)”. These signals are meant to clarify the meaning of a citation, e.g. as supportive, related, or even contradicting the statement made in the main work. Citation signals are therefore crucial, and wrong use can also constitute misconduct! (a few of the high-profile cases with politicians turned around a cf. that was inserted although it should be a direct citation). A list of explanations of the different signals is provided \href{http://en.wikipedia.org/wiki/Citation_signal}{here}. Some of the most important are:
 
-\paragraph{You should read the papers you cite} A recurrent problem, both in student's assignments and in the academic literature, is that papers are cited too broadly or wrongly. \citet{Editorial-Causecorrelationconjecture-2015} gives an account of that. \citet{Greenberg-Howcitationdistortions-2009} examine citation networks of papers that are miss-cited. The bottomline is: 1) sure you read the papers that you cite. 2) cite specifically, e.g. by noting in a short sentence for what you cite a paper or what they found, instead of writing only (see also Smith, 2001). 
+\paragraph{You should read the papers you cite and cite them correctly} A recurrent problem, both in student's assignments and in the academic literature, is that papers are cited too broadly or wrongly. \citet{Editorial-Causecorrelationconjecture-2015} gives an account of that. \citet{Greenberg-Howcitationdistortions-2009} examine citation networks of papers that are miss-cited. The bottomline is: 1) sure you read the papers that you cite. 2) cite specifically, e.g. by noting in a short sentence for what you cite a paper or what they found, instead of writing only (see also Smith, 2001). 
 
 \vspace{1cm}
 \begin{mdframed}
@@ -448,7 +446,7 @@ Threats to statistical validity are wrong statistical assumptions, but also expl
 
 \subsection{External validity}
 
-External validity\marginnote{External validity = do extrapolations hold} asks the question: Does our inference about correlations, or cause-effect relationships hold outside the empirical observations available to use. In other word - can we generalize our study, and if so, to what extent. 
+External validity\marginnote{External validity = do extrapolations hold} asks the question: Does our inference about correlations, or cause-effect relationships hold outside the empirical observations available to us. In other word - can we generalize our study, and if so, to what extent. 
 
 The problem with external validity is that it's hard to demonstrate - if we have measured a plot in a particular location, we cannot be sure a priori how representative it is. In practice, it is a matter of experience and common sense to establish the domain on which your results are valid. Nevertheless, this is a very important task, because it is of course crucial for the results of a study to know how generalization they are. 
 
@@ -505,6 +503,11 @@ As a next step, you will have to decide how you vary the value of those variable
 
 Apart\marginnote{Simulate your analysis before going into the field!} from that, I thin the most important tip for planning an experiment is: play it though! What I mean by that is: simulate how you take your data (for real with a pilot study, or make up some data), analyze it, and see if the results of this analysis correspond, in principle, to what you want to know. In most cases, you will notice that the way you were taking data is not optimal for the statistical analysis, that the analysis you do with your data does not answer what you want to know, or something alike. If you notice that before your experiment, it's easy to fix. If you notice it it afterwards, it isn't. 
 
+
+\subsection{Reproducibility}
+
+ToDo
+
 \subsection{Analysis}
 
 See chapter "inferential statistics" in the \href{https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf}{statistics script} accompanying these lecture notes.
@@ -527,7 +530,6 @@ See chapter "descriptive statistics and visualization" \href{https://github.com/
 \end{itemize*}
 
 \end{mdframed}
-
 
 
 \chapter{Principles and channels of scientific communication}
@@ -571,12 +573,12 @@ Personally, I think the importance of presentations has decreased. That is not t
 
 \subsection{Poster presentation}
 
-Poster presentations are offered on many conferences for participants that don't give a talk. Poster presentations are a great opportunity to meet people and start discussing about your work, but I don't think they rank nearly as high in terms of importance than journal articles. More material on poster presentations on our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/PosterPresentation}{lab on posters}. 
+Poster presentations\marginnote{More material on poster presentations on our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/PosterPresentation}{lab on posters}} are offered on many conferences for participants that don't give a talk. Poster presentations are a great opportunity to meet people and start discussing about your work, but I don't think they rank nearly as high in terms of importance than journal articles. . 
 
 
 \subsection{Blogs, social media, and such}
 
-Blogs, social media and similar outlets have become more important in recent years. A collection of things that are worth checking out is provided in our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/SocialMedia}{lab on social media}.
+Blogs \marginnote{A collection of things that are worth checking out is provided in our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/SocialMedia}{lab on social media}.}, social media and similar outlets have become more important in recent years. 
 
 
 \section{Arguments and logical fallacies}
@@ -675,7 +677,7 @@ Keep it simple.\footnote{Mark Twain is famous for his effective writing. A tip f
 \paragraph{Story}A scientific paper, however, is also a story. Many forget that it should be exactly one story. One paper, one story. Be sure you know what your story is. A paper tells the story several times: once in title, once in the abstract, then in the whole paper, and you give additionally summaries of your story in the introduction, and in the discussion and  conclusion.
 
 %hourglass structure
-\paragraph{The hourglass} One purpose of telling your story several times is to provide the same information with different levels of details to your reader. The most detailed account is the full paper. Your reader needs to be prepared and led to this level of detail. The idea is that the introduction starts very general, and then becomes more and more specific, until we arrive at the most detailed level at the start of the methods. After the results, we discuss first the immediate results of the paper, and then become wider again, going to implications towards general conclusions. This is known as the hourglass structure. The abstract follows the same structure. 
+\paragraph{The hourglass}\marginnote{\includegraphics[width = 3.5cm]{figures/hourglass}} One purpose of telling your story several times is to provide the same information with different levels of details to your reader. The most detailed account is the full paper. Your reader needs to be prepared and led to this level of detail. The idea is that the introduction starts very general, and then becomes more and more specific, until we arrive at the most detailed level at the start of the methods. After the results, we discuss first the immediate results of the paper, and then become wider again, going to implications towards general conclusions. This is known as the hourglass structure. The abstract follows the same structure. 
  
 \subsection{Going closer - structural elements in detail}
 
@@ -716,7 +718,7 @@ The first part has the function of providing a lazy reader with the question and
 
 
 \begin{center}
-	\huge{Fancy analysis supports hypothesis\marginnote{Try to capture the questions, methods, and main results of your study in the title, if possible} X as the main cause high species diversity in tropical forests} \\ 
+	\huge{Fancy analysis supports hypothesis\marginnote{Try to capture the questions, methods, and main results of your study in the title, if possible} X as the main cause of high species diversity in tropical forests} \\ 
 	\vspace{0.3em}
 	\large{Florian Hartig and Severin Hauenstein}\\
 	\vspace{0.3em}
